# reddit-fun

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
pull_reddit/: fetch_recent_posts.py
reddit_fetcher/: popular_subreddits.csv  reddit_api.py  reddit_posts_fetcher.py  subreddits.py
tests/: test_willow_app.py
willow/: manage.py
willow/willow/: asgi.py  settings.py  urls.py  wsgi.py
