[tool.poetry]
name = "reddit_analysis_app"
version = "0.1.0"
description = ""
authors = ["Dennis Sell <sell.dennis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.2"
Flask = "^2.1.1"
SQLAlchemy = "^1.4.35"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
